@startuml
title Homework 10 Iterator Pattern

class Quest {
  -title: String
  -priority: QuestPriority
  -rewardGold: int
  -urgent: boolean
  +getTitle(): String
  +getPriority(): QuestPriority
  +getRewardGold(): int
  +isUrgent(): boolean
}

enum QuestPriority {
  LOW
  NORMAL
  HIGH
  URGENT
}

interface QuestIterator {
  +hasNext(): boolean
  +next(): Quest
}

class QuestLog {
  -quests: List<Quest>
  +add(quest: Quest): void
  +size(): int
  +ordered(): QuestIterator
  +reverse(): QuestIterator
  +priorityAtLeast(threshold: QuestPriority): QuestIterator
  +rewardSorted(): QuestIterator
  ~snapshot(): List<Quest>
}

class OrderedQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  +hasNext(): boolean
  +next(): Quest
}

class ReverseQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  +hasNext(): boolean
  +next(): Quest
}

class PriorityQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  +hasNext(): boolean
  +next(): Quest
}

class RewardSortedQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  +hasNext(): boolean
  +next(): Quest
}

QuestLog o-- Quest
Quest --> QuestPriority
QuestLog ..> QuestIterator : creates
QuestIterator <|.. OrderedQuestIterator
QuestIterator <|.. ReverseQuestIterator
QuestIterator <|.. PriorityQuestIterator
QuestIterator <|.. RewardSortedQuestIterator
OrderedQuestIterator ..> QuestLog : snapshot()
ReverseQuestIterator ..> QuestLog : snapshot()
PriorityQuestIterator ..> QuestLog : snapshot()
RewardSortedQuestIterator ..> QuestLog : snapshot()
@enduml
